# domestic_stretch

./: CMakeLists.txt  README.md  package.xml  pylintrc.toml  requirements.txt
config/: speech_catalan.yaml  speech_english.yaml  speech_spanish.yaml
data/: example_locations.csv
launch/: manipulator.launch
scripts/: full_demo.sh  urdf_cleanup.py
src/: mover_picker_service.py  object_manager.py  search_object_demo.py  speak.py  trajectory_manager.py
src/manipulation/: ik.py  utils.py
srv/: AddCurrentLocation.srv  ClosestLocationToPosition.srv  GetCurrentLocation.srv  GetObjectPosition.srv  GetRouteForObject.srv  GoTo.srv  GoToLocation.srv  SearchObject.srv  SetSearchObjectState.srv  Speak.srv
urdf/: stretch.urdf
