<?xml version="1.0"?>
<package format="2">
    <name>stretch_manipulation</name>
    <version>1.0.0</version>
    <description>Stretch Manipulation</description>
    <maintainer email="rariosa@iri.upc.edu">rariosa</maintainer>
    <license>TODO</license>
    <author>Roberto Ariosa</author>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <depend>actionlib_msgs</depend>
    <depend>actionlib</depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <export></export>
</package>